SEO: refine keywords to only highlight on voice & image pages; unify EN meta across pages; JSON-LD translated to English on voice/ai-guide/prompt-engineering

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="AISTONE - 专业AI内容创作平台。基于最新扩散模型技术，提供企业级图像生成和语音合成服务。了解我们的技术架构、发展历程和未来愿景。">
-    <meta name="keywords" content="AISTONE,AI图像生成,语音合成,扩散模型,FLUX,Stable Diffusion,企业服务,技术架构,AI平台">
-    <title>关于AISTONE - 专业AI内容创作平台 | 技术与愿景</title>
+    <meta name="description" content="AISTONE - Professional AI content creation platform. Powered by state-of-the-art diffusion models, offering enterprise-grade image generation and voice synthesis. Learn about our architecture, roadmap and vision.">
+    <meta name="keywords" content="AISTONE, AI image generation, voice synthesis, diffusion models, FLUX, Stable Diffusion, enterprise services, architecture, AI platform">
+    <title>About AISTONE - Professional AI Content Platform | Technology & Vision</title>
     <link rel="stylesheet" href="css/style.css">
 
     <!-- 结构化数据 -->
@@ -14,7 +14,7 @@
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "AISTONE",
-        "description": "专业AI内容创作平台，提供图像生成和语音合成服务",
+        "description": "Professional AI content creation platform offering image generation and voice synthesis",
         "url": "https://aistone.org",
         "logo": "https://aistone.org/assets/logo.svg",
         "foundingDate": "2024",
