--- a/frontend/ai-guide.html
+++ b/frontend/ai-guide.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI图像生成完整指南 - AISTONE专业教程</title>
-    <meta name="description" content="深入了解AI图像生成技术：从基础原理到高级技巧，掌握FLUX、Stable Diffusion等模型，成为AI艺术创作专家。包含1000+字专业内容。">
-    <meta name="keywords" content="AI图像生成,AI绘画教程,FLUX模型,Stable Diffusion,提示词工程,AI艺术,机器学习,深度学习">
+    <title>AISTONE - Complete AI Image Generation Guide</title>
+    <meta name="description" content="In-depth AI image generation guide: from fundamentals to advanced skills. Master models like FLUX and Stable Diffusion and become an AI art expert.">
+    <meta name="keywords" content="AI image generation, AI art tutorial, FLUX model, Stable Diffusion, prompt engineering, AI art, machine learning, deep learning">
     <link rel="stylesheet" href="css/style.css">
 
     <!-- 结构化数据 -->
@@ -13,8 +13,8 @@
     {
         "@context": "https://schema.org",
         "@type": "Article",
-        "headline": "AI图像生成完整指南 - AISTONE专业教程",
-        "description": "深入了解AI图像生成技术：从基础原理到高级技巧，掌握FLUX、Stable Diffusion等模型",
+        "headline": "Complete AI Image Generation Guide - AISTONE",
+        "description": "Learn AI image generation from fundamentals to advanced techniques. Master models such as FLUX and Stable Diffusion.",
         "author": {
             "@type": "Organization",
             "name": "AISTONE"
@@ -24,7 +24,7 @@
             "name": "AISTONE",
             "logo": {
                 "@type": "ImageObject",
-                "url": "https://aistone.org/images/logo.png"
+                "url": "https://aistone.org/assets/logo.svg"
             }
         },
         "datePublished": "2025-09-09",
