--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ - Frequently Asked Questions about AISTONE</title>
-    <meta name="description" content="Find answers to common questions about AISTONE AI image generator and voice synthesis. Get help with features, usage, and troubleshooting.">
+    <title>FAQ - Frequently Asked Questions | AISTONE</title>
+    <meta name="description" content="Find answers to common questions about AISTONE's AI image generator and voice synthesis. Get help with features, usage, and troubleshooting.">
+    <meta name="keywords" content="AISTONE FAQ, help center, AI image generator help, AI voice synthesis help, troubleshooting, usage guide">
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Google AdSense -->
