--- a/frontend/image-generator.html
+++ b/frontend/image-generator.html
@@ -42,7 +42,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="AISTONE AI Image Generator - Free AI Art Creator powered by Pollinations.AI technology. Create stunning AI images with GPT Image, FLUX, Turbo models. Text-to-image generation, AI art creation, digital art maker. Perfect for designers, content creators, marketers.">
-    <meta name="keywords" content="AISTONE, AI image generator, free AI art, text to image, AI art creator, digital art">
+    <meta name="keywords" content="AI IMAGE generator, AISTONE, AI image generator, free AI art, text to image, AI art creator, digital art">
     <title>AISTONE - AI Image Generator | Free AI Art Creator | Text-to-Image | 免费AI图片生成器</title>
 
     <!-- Open Graph / Facebook -->
