--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,15 +51,15 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="AISTONE - 最佳免费AI图像生成器。支持FLUX、Turbo、Kontext等先进AI模型，从文本描述创造惊艳的AI艺术作品。无需注册，完全免费使用。">
-    <meta name="keywords" content="AISTONE, AI图像生成器, 免费AI绘画, 文本转图像, AI艺术生成, FLUX模型, 免费AI工具, AI创作平台">
-    <title>AISTONE - 免费AI图像生成器 | 最佳AI绘画平台 2025</title>
+    <meta name="description" content="AISTONE - Best free AI image generator. Powered by advanced models (FLUX, Turbo, Kontext). Create stunning AI art from text. No registration, completely free.">
+    <meta name="keywords" content="AISTONE, AI image generator, free AI art, text to image, AI art generation, FLUX model, free AI tools, AI creation platform">
+    <title>AISTONE - Free AI Image Generator | Best AI Art Platform 2025</title>
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://aistone.org/">
-    <meta property="og:title" content="AISTONE - 免费AI图像生成器">
-    <meta property="og:description" content="最佳免费AI图像生成平台，支持FLUX、Turbo、Kontext等先进AI模型。从文本描述创造惊艳的AI艺术作品，无需注册，完全免费使用。">
+    <meta property="og:title" content="AISTONE - Free AI Image Generator">
+    <meta property="og:description" content="Best free AI image generator platform powered by FLUX, Turbo, Kontext. Create stunning AI art from text. No registration, completely free.">
     <meta property="og:image" content="https://aistone.org/assets/logo.svg">
     <meta property="og:site_name" content="AISTONE">
     <meta property="og:locale" content="en_US">
@@ -68,8 +68,8 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://aistone.org/">
-    <meta property="twitter:title" content="AISTONE - 免费AI图像生成器">
-    <meta property="twitter:description" content="最佳免费AI图像生成平台，支持FLUX、Turbo、Kontext等先进AI模型。从文本描述创造惊艳的AI艺术作品。">
+    <meta property="twitter:title" content="AISTONE - Free AI Image Generator">
+    <meta property="twitter:description" content="Best free AI image generator platform powered by FLUX, Turbo, Kontext. Create stunning AI art from text.">
     <meta property="twitter:image" content="https://aistone.org/assets/logo.svg">
     <meta property="twitter:site" content="@aistone_ai">
     <meta property="twitter:creator" content="@aistone_ai">
