--- a/frontend/privacy.html
+++ b/frontend/privacy.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>隐私政策 - AISTONE</title>
-    <meta name="description" content="AISTONE隐私政策 - 了解我们如何保护您的个人信息和数据安全">
+    <title>Privacy Policy - AISTONE</title>
+    <meta name="description" content="AISTONE Privacy Policy — learn how we protect your personal data and ensure security.">
+    <meta name="keywords" content="AISTONE privacy policy, data protection, personal data, security, cookies, user rights">
     <link rel="stylesheet" href="css/style.css">
     
     <!-- Google AdSense -->
