--- a/frontend/prompt-engineering.html
+++ b/frontend/prompt-engineering.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>提示词工程专业教程 - AISTONE高级技巧指南</title>
-    <meta name="description" content="深入学习AI提示词工程：权重控制、负面提示词、风格融合等高级技巧。成为AI艺术创作的提示词专家，提升图像生成质量。">
-    <meta name="keywords" content="提示词工程,Prompt Engineering,AI提示词,权重控制,负面提示词,风格融合,AI绘画技巧,文本到图像">
+    <title>Prompt Engineering Guide - Advanced Techniques | AISTONE</title>
+    <meta name="description" content="Learn prompt engineering for AI image generation: weights, negative prompts, style control, and advanced strategies to improve output quality.">
+    <meta name="keywords" content="prompt engineering, prompt weights, negative prompts, style transfer, AI image generation, text-to-image, AI art, AISTONE">
     <link rel="stylesheet" href="css/style.css">
 
     <!-- 结构化数据 -->
@@ -13,8 +13,8 @@
     {
         "@context": "https://schema.org",
         "@type": "Article",
-        "headline": "提示词工程专业教程 - AISTONE高级技巧指南",
-        "description": "深入学习AI提示词工程：权重控制、负面提示词、风格融合等高级技巧",
+        "headline": "Prompt Engineering Guide - AISTONE Advanced Techniques",
+        "description": "Learn prompt engineering: weight control, negative prompts, and style strategies to improve AI image generation.",
         "author": {
             "@type": "Organization",
             "name": "AISTONE"
@@ -24,7 +24,7 @@
             "name": "AISTONE",
             "logo": {
                 "@type": "ImageObject",
-                "url": "https://aistone.org/images/logo.png"
+                "url": "https://aistone.org/assets/logo.svg"
             }
         },
         "datePublished": "2025-09-09",
