--- a/frontend/terms.html
+++ b/frontend/terms.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>使用条款 - AISTONE</title>
-    <meta name="description" content="AISTONE使用条款和服务协议 - 了解平台的使用规则、服务条款和用户责任">
+    <title>Terms of Service - AISTONE</title>
+    <meta name="description" content="AISTONE Terms of Service and user agreement. Understand the rules, responsibilities, and usage terms of our AI image and voice platform.">
+    <meta name="keywords" content="AISTONE terms of service, user agreement, legal, usage terms, rules">
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Google AdSense -->
