--- a/frontend/tutorial.html
+++ b/frontend/tutorial.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tutorial - How to Use AISTONE AI Generator</title>
-    <meta name="description" content="Complete tutorial guide for AISTONE AI image and voice generator. Learn step-by-step instructions to create amazing AI content.">
+    <title>Tutorial - How to Use AISTONE AI Generators</title>
+    <meta name="description" content="Complete tutorial for AISTONE's AI image and voice generators. Step-by-step guide to create high-quality AI content.">
+    <meta name="keywords" content="AISTONE tutorial, how to use, AI image generator guide, AI voice generator guide, step-by-step tutorial">
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Google AdSense -->
