--- a/frontend/user.html
+++ b/frontend/user.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title data-i18n="userCenter">个人中心</title>
-  <meta name="description" content="AISTONE 个人中心 - 登录后管理你的高清图片与账户信息。" />
+  <title data-i18n="userCenter">User Center - AISTONE Account</title>
+  <meta name="description" content="AISTONE User Center — manage your HD images, preferences, and account information after login." />
+  <meta name="keywords" content="AISTONE user center, account, HD images, preferences, profile management">
   <link rel="canonical" href="/user.html" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
