--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="AISTONE - 联系我们，AI图片生成与语音合成平台客服支持。">
-    <meta name="keywords" content="AISTONE, 联系, 客服, AI图片生成, AI语音合成, 免费AI工具, 技术支持">
-    <title data-i18n="contactModalTitle">联系我们</title>
+    <meta name="description" content="Contact AISTONE support for AI image generation and voice synthesis. Get help with features, technical issues, partnerships, and media inquiries.">
+    <meta name="keywords" content="AISTONE, contact, support, customer service, AI image generator, AI voice synthesis, free AI tools, technical support, partnership, help center">
+    <title data-i18n="contactModalTitle">Contact Us - AISTONE | AI Image & Voice Support</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
