--- a/frontend/services.html
+++ b/frontend/services.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="AISTONE - 服务介绍，AI图片生成与语音合成平台功能一览。">
-    <meta name="keywords" content="AISTONE, 服务, AI图片生成, AI语音合成, 免费AI工具, 平台功能">
-    <title data-i18n="servicesModalTitle">我们的服务</title>
+    <meta name="description" content="AISTONE services overview — AI image generation and voice synthesis platform. Explore features, capabilities, and benefits.">
+    <meta name="keywords" content="AISTONE, services, AI image generator, AI voice synthesis, free AI tools, platform features, capabilities">
+    <title data-i18n="servicesModalTitle">Our Services - AISTONE | AI Image & Voice Platform</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
