--- a/frontend/tutorial.html
+++ b/frontend/tutorial.html
@@ -68,12 +68,12 @@
             <div class="tutorial-content">
 
                 <section class="tutorial-intro">
-                    <h2>欢迎使用AISTONE</h2>
-                    <p>AISTONE是一个强大的AI内容生成平台，支持文本转图片和文本转语音功能。本教程将帮助您快速上手，充分发挥平台的功能。</p>
+                    <h2 data-i18n="tutorialWelcomeTitle">欢迎使用AISTONE</h2>
+                    <p data-i18n="tutorialWelcomeDesc">AISTONE是一个强大的AI内容生成平台，支持文本转图片和文本转语音功能。本教程将帮助您快速上手，充分发挥平台的功能。</p>
                 </section>
 
                 <section class="tutorial-section">
-                    <h2>1. 快速开始</h2>
+                    <h2 data-i18n="tutorialQuickStartTitle">1. 快速开始</h2>
                     <div class="tutorial-step">
                         <h3 data-i18n="tutorialStep1Title">步骤1：访问平台</h3>
                         <p data-i18n="tutorialStep1Desc">打开浏览器访问 <a href="https://aistone.org">https://aistone.org</a>，无需注册即可开始使用。</p>
@@ -89,8 +89,8 @@
                     </div>
 
                     <div class="tutorial-step">
-                        <h3>步骤3：输入描述文本</h3>
-                        <p>在文本输入框中输入您的描述内容：</p>
+                        <h3 data-i18n="tutorialStep3Title">步骤3：输入描述文本</h3>
+                        <p data-i18n="tutorialStep3Desc">在文本输入框中输入您的描述内容：</p>
                         <div class="example-box">
                             <strong>图片示例：</strong> "一只可爱的猫咪在阳光明媚的花园里玩耍，背景是绿色的草地和蓝色的天空，高清摄影风格"
                         </div>
@@ -100,17 +100,17 @@
                     </div>
 
                     <div class="tutorial-step">
-                        <h3>步骤4：点击生成</h3>
-                        <p>点击"开始生成"按钮，AI将开始处理您的请求。通常需要10-30秒完成生成。</p>
+                        <h3 data-i18n="tutorialStep4Title">步骤4：点击生成</h3>
+                        <p data-i18n="tutorialStep4Desc">点击"开始生成"按钮，AI将开始处理您的请求。通常需要10-30秒完成生成。</p>
                     </div>
                 </section>
 
                 <section class="tutorial-section">
-                    <h2>2. 图片生成功能详解</h2>
+                    <h2 data-i18n="tutorialImageFeaturesTitle">2. 图片生成功能详解</h2>
 
                     <div class="tutorial-step">
-                        <h3>AI模型选择</h3>
-                        <p>AISTONE提供多种AI模型供选择：</p>
+                        <h3 data-i18n="tutorialModelSelectionTitle">AI模型选择</h3>
+                        <p data-i18n="tutorialModelSelectionDesc">AISTONE提供多种AI模型供选择：</p>
                         <ul>
                             <li><strong>FLUX：</strong>高质量艺术创作，适合大多数场景</li>
                             <li><strong>Turbo：</strong>快速生成，适合原型设计</li>
