SEO fixes: refine robots.txt; add canonical+hreflang; noindex auth/user; update sitemap lastmod; ensure indexable on key pages

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -6,6 +6,10 @@
     <meta name="description" content="AISTONE - Professional AI content creation platform. Powered by state-of-the-art diffusion models, offering enterprise-grade image generation and voice synthesis. Learn about our architecture, roadmap and vision.">
     <meta name="keywords" content="AISTONE, AI image generation, voice synthesis, diffusion models, FLUX, Stable Diffusion, enterprise services, architecture, AI platform">
     <title>About AISTONE - Professional AI Content Platform | Technology & Vision</title>
+    <link rel="canonical" href="https://aistone.org/about.html">
+    <link rel="alternate" hreflang="en" href="https://aistone.org/about.html">
+    <link rel="alternate" hreflang="zh" href="https://aistone.org/about.html">
+    <link rel="alternate" hreflang="x-default" href="https://aistone.org/about.html">
     <link rel="stylesheet" href="css/style.css">
 
     <!-- 结构化数据 -->
