--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -6,6 +6,10 @@
     <meta name="description" content="Contact AISTONE support for AI image generation and voice synthesis. Get help with features, technical issues, partnerships, and media inquiries.">
     <meta name="keywords" content="AISTONE, contact, support, customer service, AI image generator, AI voice synthesis, free AI tools, technical support, partnership, help center">
     <title data-i18n="contactModalTitle">Contact Us - AISTONE | AI Image & Voice Support</title>
+    <link rel="canonical" href="https://aistone.org/contact.html">
+    <link rel="alternate" hreflang="en" href="https://aistone.org/contact.html">
+    <link rel="alternate" hreflang="zh" href="https://aistone.org/contact.html">
+    <link rel="alternate" hreflang="x-default" href="https://aistone.org/contact.html">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
