--- a/frontend/index.html
+++ b/frontend/index.html
@@ -101,6 +101,9 @@
     <link rel="alternate" hreflang="zh" href="https://aistone.org/">
     <link rel="alternate" hreflang="x-default" href="https://aistone.org/">
     
+    <!-- Robots: ensure indexable -->
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    
     <link rel="stylesheet" href="css/style.css">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-FYQPWQ1JTM"></script>
