--- a/frontend/tutorial.html
+++ b/frontend/tutorial.html
@@ -7,6 +7,10 @@
     <meta name="description" content="Complete tutorial for AISTONE's AI image and voice generators. Step-by-step guide to create high-quality AI content.">
     <meta name="keywords" content="AISTONE tutorial, how to use, AI image generator guide, AI voice generator guide, step-by-step tutorial">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="canonical" href="https://aistone.org/tutorial.html">
+    <link rel="alternate" hreflang="en" href="https://aistone.org/tutorial.html">
+    <link rel="alternate" hreflang="zh" href="https://aistone.org/tutorial.html">
+    <link rel="alternate" hreflang="x-default" href="https://aistone.org/tutorial.html">
 
     <!-- Google AdSense -->
     <meta name="google-adsense-account" content="ca-pub-6165370615688912">
