--- a/frontend/user.html
+++ b/frontend/user.html
@@ -6,7 +6,8 @@
   <title data-i18n="userCenter">User Center - AISTONE Account</title>
   <meta name="description" content="AISTONE User Center — manage your HD images, preferences, and account information after login." />
   <meta name="keywords" content="AISTONE user center, account, HD images, preferences, profile management">
-  <link rel="canonical" href="/user.html" />
+  <link rel="canonical" href="https://aistone.org/user.html" />
+  <meta name="robots" content="noindex, nofollow, noarchive">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="css/style.css" rel="stylesheet">
