--- a/frontend/ai-guide.html
+++ b/frontend/ai-guide.html
@@ -7,6 +7,10 @@
     <meta name="description" content="In-depth AI image generation guide: from fundamentals to advanced skills. Master models like FLUX and Stable Diffusion and become an AI art expert.">
     <meta name="keywords" content="AI image generation, AI art tutorial, FLUX model, Stable Diffusion, prompt engineering, AI art, machine learning, deep learning">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="canonical" href="https://aistone.org/ai-guide.html">
+    <link rel="alternate" hreflang="en" href="https://aistone.org/ai-guide.html">
+    <link rel="alternate" hreflang="zh" href="https://aistone.org/ai-guide.html">
+    <link rel="alternate" hreflang="x-default" href="https://aistone.org/ai-guide.html">
 
     <!-- 结构化数据 -->
     <script type="application/ld+json">
