--- a/frontend/auth/google/callback.html
+++ b/frontend/auth/google/callback.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Login - Processing...</title>
+    <meta name="robots" content="noindex, nofollow, noarchive">
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
