--- a/frontend/services.html
+++ b/frontend/services.html
@@ -6,6 +6,10 @@
     <meta name="description" content="AISTONE services overview — AI image generation and voice synthesis platform. Explore features, capabilities, and benefits.">
     <meta name="keywords" content="AISTONE, services, AI image generator, AI voice synthesis, free AI tools, platform features, capabilities">
     <title data-i18n="servicesModalTitle">Our Services - AISTONE | AI Image & Voice Platform</title>
+    <link rel="canonical" href="https://aistone.org/services.html">
+    <link rel="alternate" hreflang="en" href="https://aistone.org/services.html">
+    <link rel="alternate" hreflang="zh" href="https://aistone.org/services.html">
+    <link rel="alternate" hreflang="x-default" href="https://aistone.org/services.html">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
