--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AISTONE 管理员后台</title>
+    <meta name="robots" content="noindex, nofollow, noarchive">
     <link rel="stylesheet" href="css/style.css">
     <style>
         .admin-container {
@@ -244,7 +245,7 @@
     <div class="admin-container">
         <!-- 面包屑导航 -->
         <nav class="breadcrumb">
-            <a href="index.html">首页</a>
+            <a href="/">首页</a>
             <span class="separator">></span>
             <span class="current">管理员后台</span>
         </nav>
