--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -19,7 +19,7 @@
             <span class="site-name">AISTONE</span>
         </div>
         <ul class="navbar-menu">
-            <li><a href="index.html" data-i18n="navHome">首页</a></li>
+            <li><a href="/" data-i18n="navHome">首页</a></li>
             <li><a href="voice.html" data-i18n="navVoiceGen">语音合成</a></li>
             <li><a href="about.html" data-i18n="navAbout">关于我们</a></li>
             <li><a href="ai-guide.html" data-i18n="navAIGuide">AI指南</a></li>
@@ -39,7 +39,7 @@
     <div class="container">
         <!-- 面包屑导航 -->
         <nav class="breadcrumb">
-            <a href="index.html">首页</a>
+            <a href="/">首页</a>
             <span class="separator">></span>
             <span class="current">联系我们</span>
         </nav>
@@ -86,7 +86,7 @@
                     </div>
                     <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid #e9ecef;">
                         <h3 style="font-size: 16px; margin: 0 0 8px 0; color: #007bff;">
-                            <a href="index.html" style="text-decoration: none; color: inherit;" data-i18n="contactHelpHomeTitle">🏠 返回首页</a>
+                            <a href="/" style="text-decoration: none; color: inherit;" data-i18n="contactHelpHomeTitle">🏠 返回首页</a>
                         </h3>
                         <p style="margin: 0; font-size: 14px; color: #666;" data-i18n="contactHelpHomeDesc">回到主页开始使用AI生成功能</p>
                     </div>
