--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -24,7 +24,7 @@
             <span class="site-name">AISTONE</span>
         </div>
         <ul class="navbar-menu">
-            <li><a href="index.html" data-i18n="navHome">首页</a></li>
+            <li><a href="/" data-i18n="navHome">首页</a></li>
             <li><a href="voice.html" data-i18n="navVoiceGen">语音合成</a></li>
             <li><a href="about.html" data-i18n="navAbout">关于我们</a></li>
             <li><a href="ai-guide.html" data-i18n="navAIGuide">AI指南</a></li>
@@ -46,7 +46,7 @@
         <div class="container">
             <!-- 面包屑导航 -->
             <nav class="breadcrumb">
-                <a href="index.html" data-i18n="navHome">首页</a>
+                <a href="/" data-i18n="navHome">首页</a>
                 <span class="separator">></span>
                 <span class="current" data-i18n="navFAQ">常见问题</span>
             </nav>
@@ -440,7 +440,7 @@
                         </div>
                         <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid #e9ecef;">
                             <h3 style="font-size: 16px; margin: 0 0 8px 0; color: #007bff;">
-                                <a href="index.html" style="text-decoration: none; color: inherit;">🏠 返回首页</a>
+                                <a href="/" style="text-decoration: none; color: inherit;">🏠 返回首页</a>
                             </h3>
                             <p style="margin: 0; font-size: 14px; color: #666;">回到主页开始使用AI图片和语音生成功能</p>
                         </div>
@@ -472,7 +472,7 @@
                     <p>详细的操作指南，帮助您快速掌握AISTONE的各项功能。</p>
                 </div>
                 <div class="related-item">
-                    <h4><a href="index.html">AI图片生成器</a></h4>
+                    <h4><a href="/">AI图片生成器</a></h4>
                     <p>立即体验我们的AI图片生成功能，创造令人惊艳的艺术作品。</p>
                 </div>
                 <div class="related-item">
