--- a/frontend/image-generator.html
+++ b/frontend/image-generator.html
@@ -141,7 +141,7 @@
             <span class="site-name">AISTONE</span>
         </div>
         <ul class="navbar-menu">
-            <li><a href="index.html" data-i18n="navHome">首页</a></li>
+            <li><a href="/" data-i18n="navHome">首页</a></li>
             <li><a href="voice.html" data-i18n="navVoiceGen">语音合成</a></li>
             <li><a href="about.html" data-i18n="navAbout">关于我们</a></li>
             <li><a href="ai-guide.html" data-i18n="navAIGuide">AI指南</a></li>
@@ -200,7 +200,7 @@
             <nav class="breadcrumb" id="breadcrumb-nav" aria-label="面包屑导航">
                 <ol class="breadcrumb-list">
                     <li class="breadcrumb-item">
-                        <a href="index.html" class="breadcrumb-link" data-i18n="navHome">首页</a>
+                        <a href="/" class="breadcrumb-link" data-i18n="navHome">首页</a>
                     </li>
                     <li class="breadcrumb-item">
                         <span class="breadcrumb-current" data-i18n="breadcrumbImageGenerator">AI图片生成器</span>
