--- a/frontend/prompt-engineering.html
+++ b/frontend/prompt-engineering.html
@@ -53,7 +53,7 @@
             <span class="site-name">AISTONE</span>
         </div>
         <ul class="navbar-menu">
-            <li><a href="index.html" data-i18n="navHome">首页</a></li>
+            <li><a href="/" data-i18n="navHome">首页</a></li>
             <li><a href="voice.html" data-i18n="navVoiceGen">语音合成</a></li>
             <li><a href="about.html" data-i18n="navAbout">关于我们</a></li>
             <li><a href="ai-guide.html" data-i18n="navAIGuide">AI指南</a></li>
@@ -90,7 +90,7 @@
         <div class="container">
             <!-- 面包屑导航 -->
             <nav class="breadcrumb">
-                <a href="index.html" data-i18n="navHome">首页</a>
+                <a href="/" data-i18n="navHome">首页</a>
                 <span class="separator">></span>
                 <a href="tutorial.html">教程</a>
                 <span class="separator">></span>
@@ -964,10 +964,10 @@
                         
                         <div class="related-card" style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border: 1px solid #e9ecef;">
                             <h3 style="font-size: 18px; margin: 0 0 12px 0; color: #007bff;">
-                                <a href="index.html" style="text-decoration: none; color: inherit;">🎨 开始实战练习</a>
+                                <a href="/" style="text-decoration: none; color: inherit;">🎨 开始实战练习</a>
                             </h3>
                             <p style="margin: 0 0 15px 0; font-size: 14px; color: #666; line-height: 1.5;">运用学到的提示词技巧，立即开始你的AI艺术创作之旅</p>
-                            <a href="index.html" style="font-size: 13px; color: #007bff; text-decoration: none; font-weight: 500;">开始创作 →</a>
+                            <a href="/" style="font-size: 13px; color: #007bff; text-decoration: none; font-weight: 500;">开始创作 →</a>
                         </div>
                         
                         <div class="related-card" style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border: 1px solid #e9ecef;">
