--- a/frontend/services.html
+++ b/frontend/services.html
@@ -19,7 +19,7 @@
             <span class="site-name">AISTONE</span>
         </div>
         <ul class="navbar-menu">
-            <li><a href="index.html" data-i18n="navHome">首页</a></li>
+            <li><a href="/" data-i18n="navHome">首页</a></li>
             <li><a href="voice.html" data-i18n="navVoiceGen">语音合成</a></li>
             <li><a href="about.html" data-i18n="navAbout">关于我们</a></li>
             <li><a href="ai-guide.html" data-i18n="navAIGuide">AI指南</a></li>
@@ -39,7 +39,7 @@
     <div class="container">
         <!-- 面包屑导航 -->
         <nav class="breadcrumb">
-            <a href="index.html" data-i18n="breadcrumbHome">首页</a>
+            <a href="/" data-i18n="breadcrumbHome">首页</a>
             <span class="separator">></span>
             <span class="current" data-i18n="servicesModalTitle">我们的服务</span>
         </nav>
@@ -64,7 +64,7 @@
                 <div class="related-links" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 15px;">
                     <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid #e9ecef;">
                         <h3 style="font-size: 16px; margin: 0 0 8px 0; color: #007bff;">
-                            <a href="index.html" style="text-decoration: none; color: inherit;" data-i18n="relatedImageGenTitle">🎨 AI图片生成</a>
+                            <a href="/" style="text-decoration: none; color: inherit;" data-i18n="relatedImageGenTitle">🎨 AI图片生成</a>
                         </h3>
                         <p style="margin: 0; font-size: 14px; color: #666;" data-i18n="relatedImageGenDesc">体验我们的核心服务，将想法转化为精美图像</p>
                     </div>
