--- a/frontend/terms.html
+++ b/frontend/terms.html
@@ -22,10 +22,10 @@
         <nav>
             <div class="nav-container">
                 <div class="logo">
-                    <a href="index.html">AISTONE</a>
+                    <a href="/">AISTONE</a>
                 </div>
                 <ul class="nav-menu">
-                    <li><a href="index.html">首页</a></li>
+                    <li><a href="/">首页</a></li>
                     <li><a href="about.html">关于我们</a></li>
                     <li><a href="services.html">服务</a></li>
                     <li><a href="contact.html">联系我们</a></li>
@@ -38,7 +38,7 @@
         <div class="container">
             <!-- 面包屑导航 -->
             <nav class="breadcrumb">
-                <a href="index.html">首页</a>
+                <a href="/">首页</a>
                 <span class="separator">></span>
                 <span class="current">使用条款</span>
             </nav>
