--- a/frontend/tutorial.html
+++ b/frontend/tutorial.html
@@ -24,7 +24,7 @@
             <span class="site-name">AISTONE</span>
         </div>
         <ul class="navbar-menu">
-            <li><a href="index.html" data-i18n="navHome">首页</a></li>
+            <li><a href="/" data-i18n="navHome">首页</a></li>
             <li><a href="voice.html" data-i18n="navVoiceGen">语音合成</a></li>
             <li><a href="about.html" data-i18n="navAbout">关于我们</a></li>
             <li><a href="ai-guide.html" data-i18n="navAIGuide">AI指南</a></li>
@@ -64,7 +64,7 @@
         <div class="container">
             <!-- 面包屑导航 -->
             <nav class="breadcrumb">
-                <a href="index.html">首页</a>
+                <a href="/">首页</a>
                 <span class="separator">></span>
                 <span class="current">使用教程</span>
             </nav>
@@ -326,7 +326,7 @@
                         </div>
                         <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid #e9ecef;">
                             <h3 style="font-size: 16px; margin: 0 0 8px 0; color: #007bff;">
-                                <a href="index.html" style="text-decoration: none; color: inherit;">🎨 立即生成图片</a>
+                                <a href="/" style="text-decoration: none; color: inherit;">🎨 立即生成图片</a>
                             </h3>
                             <p style="margin: 0; font-size: 14px; color: #666;">学会了使用方法？现在就开始创作您的第一张AI图片</p>
                         </div>
@@ -358,7 +358,7 @@
                     <p>解决使用过程中遇到的常见问题，提供详细的故障排除指南。</p>
                 </div>
                 <div class="related-item">
-                    <h4><a href="index.html">AI图片生成器</a></h4>
+                    <h4><a href="/">AI图片生成器</a></h4>
                     <p>立即体验我们的AI图片生成功能，创造令人惊艳的艺术作品。</p>
                 </div>
                 <div class="related-item">
