--- a/frontend/user.html
+++ b/frontend/user.html
@@ -102,7 +102,7 @@
       <span class="site-name">AISTONE</span>
     </div>
     <ul class="navbar-menu">
-      <li><a href="index.html" data-i18n="navHome">首页</a></li>
+      <li><a href="/" data-i18n="navHome">首页</a></li>
       <li><a href="voice.html" data-i18n="navVoiceGen">语音合成</a></li>
       <li><a href="about.html" data-i18n="navAbout">关于我们</a></li>
       <li><a href="ai-guide.html" data-i18n="navAIGuide">AI指南</a></li>
@@ -136,13 +136,13 @@
   <div class="container">
     <!-- 面包屑导航 -->
     <nav class="breadcrumb">
-      <a href="index.html">首页</a>
+      <a href="/">首页</a>
       <span class="separator">></span>
       <span class="current">个人中心</span>
     </nav>
     <div class="page-header">
       <h1 data-i18n="userCenter">个人中心</h1>
-      <a class="back-link" href="/index.html">← <span data-i18n="navHome">首页</span></a>
+      <a class="back-link" href="/">← <span data-i18n="navHome">首页</span></a>
     </div>
 
     <div class="grid-two" style="display:grid;grid-template-columns:1fr 2fr;gap:18px;align-items:start;">
