--- a/frontend/voice.html
+++ b/frontend/voice.html
@@ -153,7 +153,7 @@
             <span class="site-name">AISTONE</span>
         </div>
         <ul class="navbar-menu">
-            <li><a href="index.html" data-i18n="navHome">首页</a></li>
+            <li><a href="/" data-i18n="navHome">首页</a></li>
             <li><a href="voice.html" class="active" data-i18n="navVoiceGen">语音合成</a></li>
             <li><a href="about.html" data-i18n="navAbout">关于我们</a></li>
             <li><a href="ai-guide.html" data-i18n="navAIGuide">AI指南</a></li>
@@ -212,7 +212,7 @@
             <nav class="breadcrumb" id="breadcrumb-nav" aria-label="面包屑导航" style="margin-top: 20px;">
                 <ol class="breadcrumb-list">
                     <li class="breadcrumb-item">
-                        <a href="index.html" class="breadcrumb-link" data-i18n="navHome">首页</a>
+                        <a href="/" class="breadcrumb-link" data-i18n="navHome">首页</a>
                     </li>
                     <li class="breadcrumb-item">
                         <span class="breadcrumb-current" data-i18n="navVoiceGen">AI语音合成</span>
@@ -444,9 +444,9 @@
                     <h2 class="section-title" data-i18n="relatedContentTitle">发现更多AI功能</h2>
                     <div class="related-grid">
                         <div class="related-card">
-                            <h3><a href="index.html" data-i18n="relatedImageGen">🎨 AI图像生成</a></h3>
+                            <h3><a href="/" data-i18n="relatedImageGen">🎨 AI图像生成</a></h3>
                             <p data-i18n="relatedImageGenDesc">体验强大的AI图像生成功能，从文本描述创造惊艳的视觉作品</p>
-                            <a href="index.html" class="related-link" data-i18n="tryNow">立即体验 →</a>
+                            <a href="/" class="related-link" data-i18n="tryNow">立即体验 →</a>
                         </div>
                         
                         <div class="related-card">
