--- a/frontend/voice.html
+++ b/frontend/voice.html
@@ -483,8 +483,8 @@
 
     <!-- 按依赖顺序加载脚本 -->
     <script src="js/i18n.js?v=20250909"></script>
-    <script src="js/api_client.js?v=20250909" defer></script>
-    <script src="js/ui_handler.js?v=20250909" defer></script>
+    <script src="js/api_client.js?v=20250909"></script>
+    <!-- 语音页面不依赖首页 UI 逻辑，避免阻塞语音功能 -->
     <script src="js/mobile-interactions.js?v=20250909" defer></script>
     <script src="js/voice_app.js?v=20250909" defer></script>
 
