--- a/frontend/voice.html
+++ b/frontend/voice.html
@@ -145,7 +145,7 @@
     }
     </script>
 </head>
-<body>
+<body class="voice-page">
     <!-- 顶部导航栏 -->
     <nav class="navbar">
         <div class="navbar-left">
@@ -694,6 +694,42 @@
         .action-btn { display:inline-flex; align-items:center; gap:6px; padding:8px 12px; border:1px solid #2A3A57; border-radius:8px; background:#0e1424; color:#d6def8; cursor:pointer; }
         .action-btn:hover { background:#121a2d; }
         .audio-player { width: 100%; }
+
+        /* 语音页专属排版与控件尺寸（不影响其它页面） */
+        .voice-page .section-title { font-size: 1.25rem; line-height: 1.3; color: #d6def8; }
+        .voice-page .input-label .label-text { font-size: 0.95rem; font-weight: 600; color:#d6def8; }
+        .voice-page .input-label .label-hint { font-size: 0.85rem; color:#AAB4D4; margin-left: 6px; }
+        .voice-page .voice-form { margin-top: 8px; }
+        .voice-page .voice-text-input { min-height: 160px; font-size: 1rem; line-height: 1.6; padding: 14px 16px; border-radius: 10px; border:1px solid #2A3A57; background:#0e1424; color:#d6def8; }
+        .voice-page .text-counter { margin-top: 6px; font-size: 0.85rem; color:#AAB4D4; }
+
+        .voice-page .voice-options { display:flex; gap: 18px; flex-wrap: wrap; margin-top: 10px; }
+        .voice-page .option-group { display:flex; flex-direction: column; gap: 6px; }
+        .voice-page .option-label { font-size: 0.95rem; color:#d6def8; }
+        .voice-page .voice-select { height: 40px; min-width: 220px; font-size: 0.95rem; padding: 6px 10px; border-radius: 10px; border:1px solid #2A3A57; background:#0e1424; color:#d6def8; }
+        .voice-page .speed-control { display:flex; align-items:center; gap: 10px; }
+        .voice-page .speed-slider { width: 240px; height: 6px; }
+        .voice-page .speed-display { font-size: 0.95rem; color:#d6def8; }
+
+        .voice-page .example-texts { margin-top: 10px; }
+        .voice-page .example-buttons { display: grid; grid-template-columns: repeat(auto-fit, minmax(160px, 1fr)); gap: 10px; }
+        .voice-page .example-btn { padding: 10px 12px; border:1px solid #2A3A57; background:#0e1424; color:#d6def8; border-radius:10px; cursor:pointer; font-size: 0.95rem; text-align: left; }
+        .voice-page .example-btn:hover { background:#121a2d; }
+
+        .voice-page .voice-generate-btn { font-size: 1rem; padding: 12px 22px; border-radius: 12px; background:#00CFFF; color:#0b1220; border:none; min-width: 220px; font-weight: 700; box-shadow: 0 6px 18px rgba(0,207,255,0.18); }
+        .voice-page .voice-generate-btn .btn-icon { margin-right: 6px; }
+        .voice-page .voice-generate-btn:disabled { opacity: .7; }
+
+        .voice-page .result-section { margin-top: 16px; }
+        .voice-page .info-item { display:inline-flex; align-items:center; gap:6px; margin-right: 14px; font-size: 0.95rem; color:#AAB4D4; }
+        .voice-page .info-value { color:#d6def8; }
+
+        /* 小屏优化 */
+        @media (max-width: 640px) {
+            .voice-page .voice-text-input { min-height: 140px; }
+            .voice-page .voice-generate-btn { width: 100%; min-width: 0; }
+            .voice-page .speed-slider { width: 160px; }
+        }
     </style>
 
     <!-- 页面初始化 -->
