--- a/frontend/about.html
+++ b/frontend/about.html
@@ -7,9 +7,6 @@
     <meta name="keywords" content="AISTONE, AI image generation, voice synthesis, diffusion models, FLUX, Stable Diffusion, enterprise services, architecture, AI platform">
     <title>About AISTONE - Professional AI Content Platform | Technology & Vision</title>
     <link rel="canonical" href="https://aistone.org/about.html">
-    <link rel="alternate" hreflang="en" href="https://aistone.org/about.html">
-    <link rel="alternate" hreflang="zh" href="https://aistone.org/about.html">
-    <link rel="alternate" hreflang="x-default" href="https://aistone.org/about.html">
     <link rel="stylesheet" href="css/style.css">
 
     <!-- 结构化数据 -->
@@ -1833,7 +1830,28 @@
     </style>
 
     <!-- JavaScript 文件 -->
-    <script src="js/i18n.js?v=20250909"></script>
+    <script src="js/i18n.js?v=20250913-1"></script>
+    <script>
+        // about 页 i18n 兜底初始化（兼容 file:// 打开）
+        (function(){
+            const init = () => {
+                try {
+                    if (window.getCurrentLang && window.setLanguage) {
+                        window.setLanguage(window.getCurrentLang());
+                    }
+                } catch (e) {
+                    console.warn('[about] i18n fallback init error:', e);
+                }
+            };
+            if (document.readyState === 'loading') {
+                document.addEventListener('DOMContentLoaded', init);
+            } else {
+                init();
+            }
+            // 再次兜底：延迟重刷，避免后注入节点遗漏
+            setTimeout(init, 300);
+        })();
+    </script>
     <script src="js/auth.js?v=20250909" defer></script>
     <script src="js/auth_modals.js?v=20250909" defer></script>
     <div id="auth-modals"></div>
