fix(i18n): hard-reload i18n.js across all pages and init on readyState; ensure cache-busting and robust init

--- a/frontend/voice.html
+++ b/frontend/voice.html
@@ -443,7 +443,7 @@
     </div>
 
     <!-- 按依赖顺序加载脚本 -->
-    <script src="js/i18n.js?v=20250909"></script>
+    <script src="js/i18n.js?v=20250913-2"></script>
     <script src="js/api_client.js?v=20250909"></script>
     <!-- 语音页面不依赖首页 UI 逻辑，避免阻塞语音功能 -->
     <script src="js/mobile-interactions.js?v=20250909" defer></script>
