--- a/frontend/user.html
+++ b/frontend/user.html
@@ -177,7 +177,7 @@
     </div>
   </div>
 
-  <script src="js/i18n.js?v=20250909"></script>
+  <script src="js/i18n.js?v=20250913-2"></script>
   <script src="js/auth_modals.js?v=20250909" defer></script>
   <script src="js/auth.js?v=20250909" defer></script>
   <script src="js/hd_image_manager.js?v=20250909" defer></script>
