--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -320,7 +320,7 @@
         </div>
     </div>
 
-    <script src="js/i18n.js?v=20250913-2"></script>
+    <script src="js/i18n.js?v=20250909"></script>
     <script>
         /**
          * 管理员反馈管理器
