--- a/frontend/ai-guide.html
+++ b/frontend/ai-guide.html
@@ -1787,7 +1787,7 @@
     </style>
 
     <!-- JavaScript 文件 -->
-    <script src="js/i18n.js?v=20250913-2"></script>
+    <script src="js/i18n.js?v=20250909"></script>
     <script src="js/auth.js?v=20250909" defer></script>
     
     <!-- 认证界面 -->
