--- a/frontend/image-generator.html
+++ b/frontend/image-generator.html
@@ -348,7 +348,7 @@
     </div>
 
     <!-- 按依赖顺序加载脚本 -->
-    <script src="js/i18n.js?v=20250913-2"></script>
+    <script src="js/i18n.js?v=20250909"></script>
     <script src="js/api_client.js?v=20250909" defer></script>
     <script src="js/ui_handler.js?v=20250909" defer></script>
     <script src="js/ui_enhancements.js?v=20250909" defer></script>
