--- a/frontend/services.html
+++ b/frontend/services.html
@@ -101,7 +101,7 @@
             </div>
         </div>
     </footer>
-    <script src="js/i18n.js?v=20250913-2"></script>
+    <script src="js/i18n.js"></script>
     <script src="js/ui_handler.js" defer></script>
     <script src="js/auth.js" defer></script>
     <script src="js/auth_modals.js" defer></script>
