Revert "feat(i18n): complete EN/ZN adaptation for AI Guide (chapters 2-6, workflow, techniques, business, trends, related)"
This reverts commit d4ec4e4fd06a8e99c5e64af43fc23853ecee0c1d.

--- a/frontend/ai-guide.html
+++ b/frontend/ai-guide.html
@@ -531,7 +531,7 @@
                 <section id="chapter6" class="guide-section">
                     <h2 data-i18n="aiGuide.chapter6.title">🚀 6. 进阶创作技巧与工作流</h2>
 
-                    <h3 data-i18n="aiGuide.chapter6.workflowTitle">专业工作流程</h3>
+                    <h3>专业工作流程</h3>
                     <div class="workflow-steps" data-i18n="aiGuide.chapter6.html">
                         <div class="workflow-step">
                             <h4>第一步：概念构思</h4>
@@ -584,8 +584,8 @@
                         </div>
                     </div>
 
-                    <h3 data-i18n="aiGuide.chapter6.advancedTitle">高级创作技巧</h3>
-                    <div class="advanced-techniques" data-i18n="aiGuide.chapter6.advancedHTML">
+                    <h3>高级创作技巧</h3>
+                    <div class="advanced-techniques">
                         <div class="technique">
                             <h4>🎨 风格融合技术</h4>
                             <p>将多种艺术风格巧妙结合，创造独特的视觉效果：</p>
@@ -619,8 +619,8 @@
                         </div>
                     </div>
 
-                    <h3 data-i18n="aiGuide.chapter6.businessTitle">商业应用场景</h3>
-                    <div class="business-applications" data-i18n="aiGuide.chapter6.businessHTML">
+                    <h3>商业应用场景</h3>
+                    <div class="business-applications">
                         <div class="application">
                             <h4>🏢 企业品牌设计</h4>
                             <ul>
@@ -662,8 +662,8 @@
                         </div>
                     </div>
 
-                    <div class="future-trends" data-i18n="aiGuide.chapter6.trendsHTML">
-                        <h3 data-i18n="aiGuide.chapter6.trendsTitle">🔮 未来发展趋势</h3>
+                    <div class="future-trends">
+                        <h3>🔮 未来发展趋势</h3>
                         <div class="trend-item">
                             <h4>实时生成技术</h4>
                             <p>未来AI图像生成将实现毫秒级响应，支持实时编辑和预览，为创作者提供即时反馈和无缝体验。</p>
@@ -687,7 +687,7 @@
                 </section>
 
                 <!-- 相关内容推荐 -->
-                <section class="related-content" style="margin-top: 50px; padding: 30px; background: #f8f9fa; border-radius: 12px;" data-i18n="aiGuide.relatedHTML">
+                <section class="related-content" style="margin-top: 50px; padding: 30px; background: #f8f9fa; border-radius: 12px;">
                     <h2 style="color: #333; margin-bottom: 25px; text-align: center;">📚 深入学习推荐</h2>
                     <div class="related-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px;">
                         <div class="related-card" style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border: 1px solid #e9ecef;">
